# clock32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  blink.cpp  htu2x.c  htu2x.cpp  htu2x.h  idf_component.yml  kvs.cpp  kvs.hpp  lighting.cpp  lighting.hpp  provision.c  provision.h  screen.cpp  screen.hpp  sntp.cpp  sntp.hpp  utils.cpp  utils.hpp
main/display/: font.cpp  layers.cpp  layers.hpp  screen.cpp  screen.hpp  transformation.cpp  transformation.hpp
main/mqtt/: mqtt_wrapper.cpp  mqtt_wrapper.hpp
main/proto/: defines.cpp  defines.hpp  handler.cpp  handler.hpp  http_server.cpp  http_server.hpp  json_wrapper.cpp  json_wrapper.hpp
main/sensors/: htu2x.cpp  lighting.cpp  lighting.hpp  sensor_event.hpp
main/test/: tst_utils.c  tst_utils.cpp
main/time/: clock_tm.cpp  clock_tm.hpp  sntp.cpp  sntp.hpp
main/utils/: average_treshold.hpp  puller.hpp
pcb/: eagle.epf  main.brd  main.cam  main.pro  main.sch
