idf_component_register(
    SRCS
        "app_main.cpp" 
        "mqtt/mqtt_wrapper.cpp" 
        "utils.cpp" 
        "provision.c"
        "kvs.cpp"
        "time/sntp.cpp"
        "time/clock_tm.cpp"
        "display/blink.cpp" 
        "display/font.cpp"
        "display/screen.cpp"
        "display/transformation.cpp"
        "display/layers.cpp"
        "display/tests.cpp"
        "sensors/sensor_event.cpp"
        "sensors/lighting.cpp"
        "sensors/htu2x.cpp"
        "proto/json_wrapper.cpp"
        "proto/handler.cpp"
        "proto/defines.cpp"
       
    INCLUDE_DIRS
        "." 
    REQUIRES
        nvs_flash 
        wifi_provisioning 
        json 
        esp_wifi 
        mqtt 
        driver 
        spi_flash
        si7021
        max7219
    )
