idf_component_register(
    SRCS
        "app_main.cpp" 
        "libs/mqtt/mqtt_wrapper.cpp" 
        "libs/provision/provision.cpp"
        "time/sntp.cpp"
        "time/clock_tm.cpp"
        "libs/display/blink.cpp" 
        "libs/sensors/sensor_event.cpp"
        "libs/sensors/lighting.cpp"
        "libs/sensors/htu2x.cpp"
        "libs/proto/json_wrapper.cpp"
        "libs/proto/handler.cpp"
        "libs/proto/defines.cpp"
        "libs/proto/http_server.cpp"
        "libs/utils/utils.cpp" 
        "libs/utils/kvs.cpp"
        #-----------------
        "libs/test/tst_utils.cpp"
       
    INCLUDE_DIRS
        "." 
        "libs" 
    REQUIRES
        nvs_flash 
        wifi_provisioning 
        json 
        esp_wifi 
        mqtt 
        driver 
        spi_flash
        si7021
        max7219
        unity
        esp_http_server
    )
